# aoc2023

./: Cargo.toml
src/: day1.rs  day10.rs  day1_grammar.pest  day2.rs  day3.rs  day4.rs  day4_grammar.pest  day5.rs  day5_grammar.pest  day6.rs  day7.rs  day8.rs  day8_grammar.pest  day9.rs  macros.rs  main.rs
