[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = { version = "2.7.5", features = [] }
pest_derive = { version = "2.7.5", features = [] }
clap = { version = "4.4.10", features = [ "derive" ] }
rayon = { version = "1.8.0", features = [] }
